@@ -224,6 +224,15 @@ const gremlins = {
     g_E_hasLabelXnullX: [function({g}) { return g.E().hasLabel(null) }], 
     g_E_hasXlabel_nullX: [function({g}) { return g.E().has(T.label,null) }], 
     g_V_properties_hasLabelXnullX: [function({g}) { return g.V().properties().hasLabel(null) }], 
+    g_V_properties_hasKeyXnullX: [function({g}) { return g.V().properties().hasKey(null) }], 
+    g_V_properties_hasKeyXnull_nullX: [function({g}) { return g.V().properties().hasKey(null,null) }], 
+    g_V_properties_hasKeyXnull_ageX_value: [function({g}) { return g.V().properties().hasKey(null,"age").value() }], 
+    g_E_properties_hasKeyXnullX: [function({g}) { return g.E().properties().hasKey(null) }], 
+    g_E_properties_hasKeyXnull_nullX: [function({g}) { return g.E().properties().hasKey(null,null) }], 
+    g_E_properties_hasKeyXnull_weightX_value: [function({g}) { return g.E().properties().hasKey(null,"weight").value() }], 
+    g_V_properties_hasValueXnullX: [function({g}) { return g.V().properties().hasKey(null) }], 
+    g_V_properties_hasValueXnull_nullX: [function({g}) { return g.V().properties().hasValue(null,null) }], 
+    g_V_properties_hasValueXnull_joshX_value: [function({g}) { return g.V().properties().hasValue(null,"josh").value() }], 
     g_V_valuesXageX_isX32X: [function({g}) { return g.V().values("age").is(32) }], 
     g_V_valuesXageX_isXlte_30X: [function({g}) { return g.V().values("age").is(P.lte(30)) }], 
     g_V_valuesXageX_isXgte_29X_isXlt_34X: [function({g}) { return g.V().values("age").is(P.gte(29)).is(P.lt(34)) }], 
