@@ -209,6 +209,15 @@ world.gremlins = {
     'g_E_hasLabelXnullX': [(lambda g:g.E().hasLabel(None))], 
     'g_E_hasXlabel_nullX': [(lambda g:g.E().has(T.label,None))], 
     'g_V_properties_hasLabelXnullX': [(lambda g:g.V().properties().hasLabel(None))], 
+    'g_V_properties_hasKeyXnullX': [(lambda g:g.V().properties().hasKey(None))], 
+    'g_V_properties_hasKeyXnull_nullX': [(lambda g:g.V().properties().hasKey(None,None))], 
+    'g_V_properties_hasKeyXnull_ageX_value': [(lambda g:g.V().properties().hasKey(None,'age').value())], 
+    'g_E_properties_hasKeyXnullX': [(lambda g:g.E().properties().hasKey(None))], 
+    'g_E_properties_hasKeyXnull_nullX': [(lambda g:g.E().properties().hasKey(None,None))], 
+    'g_E_properties_hasKeyXnull_weightX_value': [(lambda g:g.E().properties().hasKey(None,'weight').value())], 
+    'g_V_properties_hasValueXnullX': [(lambda g:g.V().properties().hasKey(None))], 
+    'g_V_properties_hasValueXnull_nullX': [(lambda g:g.V().properties().hasValue(None,None))], 
+    'g_V_properties_hasValueXnull_joshX_value': [(lambda g:g.V().properties().hasValue(None,'josh').value())], 
     'g_V_valuesXageX_isX32X': [(lambda g:g.V().age.is_(32))], 
     'g_V_valuesXageX_isXlte_30X': [(lambda g:g.V().age.is_(P.lte(30)))], 
     'g_V_valuesXageX_isXgte_29X_isXlt_34X': [(lambda g:g.V().age.is_(P.gte(29)).is_(P.lt(34)))], 
